# wifi-connect

./: Cargo.toml  Dockerfile  Dockerfile.template  README.md  start-wifi-connect.sh
.github/actions/publish/: action.yml
scripts/: deploy.sh
src/: config.rs  connectivity.rs  dnsmasq.rs  errors.rs  exit.rs  logger.rs  main.rs  network.rs  server.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/public/static/: manifest.json
ui/src/components/: App.tsx  NetworkInfoForm.tsx  Notifications.tsx
