[package]
name = "wifi-connect"
version = "4.12.1"
authors = ["Linus Reitmayr <linus.reitmayr@gaitq.com>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"

[dependencies]
network-manager = { git = "https://github.com/balena-io-modules/network-manager.git" }
clap = "4.5.4"
iron = "0.6"
iron-cors = "0.8"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.4"
params = "0.8"
log = "0.4.21"
env_logger = "0.11.3"
nix = { version = "0.29.0", features = ["signal", "user"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
crossbeam = "0.8.4"

[dependencies.error-chain]
version = "0.12"
default-features = false

[profile.release]
lto = true
